#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-08-00
2013-07-10 Andy Salnikov
- more templates
- switching to templated classes in pds2psana backend

Tag: V00-07-01
2013-07-02 Andy Salnikov
- a bit more refactoring and simplification of templates
- adding code to store data

Tag: V00-07-00
2013-07-01 Andy Salnikov
- small scale refactoring of HDF5 backend, moved all Jinja2 templates to
  a data/templates/hdf5.tmpl library
- new class TemplateLoader implementing Jinja32 loader which finds templates
  in the above library
- replace more hard-coded code generation with Jinja2 templates

Tag: V00-06-07
2013-06-20 Andy Salnikov
- DdlPds2PsanaDispatch: do not produce warnings for duplicated event keys,
  there is alegitimate case when the same data may appear twice in the event
  (compressed and uncompresed) and we should not produce wornings for those.

Tag: V00-06-06
2013-05-21 Andy Salnikov
- stop generationg __typeid__ method for Python classes, not used anymore

Tag: V00-06-05
2013-04-23 Andy Salnikov
- few changes to DdlPds2PsanaDispatch related to compressed data
- integrate special PnccdFullframProxy into generator

Tag: V00-06-04
2013-03-29 Andy Salnikov
- small improvements for enum types

Tag: V00-06-03
2013-03-26 Andy Salnikov
- DdlHdf5DataDispatch: adding aliases for CsPad data types

Tag: V00-06-02
2013-03-25 Andy Salnikov
- PNCCD Frame classes need special support through the aliases

Tag: V00-06-01
2013-03-25 Andy Salnikov
- fix missing slash when dumping hdf5 schema

Tag: V00-06-00
2013-03-24 Andy Salnikov
- new feature: rewriting of the naes of enum constants in HDF5 schema,